--- a/.config/i3/config
+++ b/.config/i3/config
@@ -36,8 +36,17 @@ exec --no-startup-id $HOME/.config/i3/secondary_monitor
 # Startup script to for battery alert
 exec --no-startup-id $HOME/.config/i3/i3-battery-popup/i3-battery-popup -L 20 -t 10m -n
 
+# Startup compton
+exec --no-startup-id compton
+
+# Load Wallpaper
+# TODO MAKE IT MORE GENERIC
+exec feh --bg-scale ~/Downloads/wallpaper_4k.jpg
+
 # Script to launch polybar
 #exec_always --no-startup-id $HOME/.config/i3/polybar_launcher
+
+
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -50,7 +59,7 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec alacritty --config-file $HOME/.config/alacritty/alacritty.yml
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -191,18 +200,17 @@ bar {
         status_command i3status
 }
 
-for_window [class="^.*"] border pixel 0
-gaps inner 10
-gaps outer 5
+for_window [class="^.*"] border pixel 5
+gaps inner 40
+gaps outer 0
 
-
-# Screenshots
-bindsym Print exec --no-startup-id maim "/home/$USER/Pictures/$(date)"
-bindsym $mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) "/home/$USER/Pictures/$(date)"
-bindsym Shift+Print exec --no-startup-id maim --select "/home/$USER/Pictures/$(date)"
-
-## Clipboard Screenshots
-bindsym Ctrl+Print exec --no-startup-id maim | xclip -selection clipboard -t image/png
-bindsym Ctrl+$mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) | xclip -selection clipboard -t image/png
-bindsym Ctrl+Shift+Print exec --no-startup-id maim --select | xclip -selection clipboard -t image/png
+## Dracula Theme
+## class                 border  bground text    indicator child_border
+client.focused          #6272A4 #6272A4 #F8F8F2 #6272A4   #6272A4
+client.focused_inactive #44475A #44475A #F8F8F2 #44475A   #44475A
+client.unfocused        #282A36 #282A36 #BFBFBF #282A36   #282A36
+client.urgent           #44475A #FF5555 #F8F8F2 #FF5555   #FF5555
+client.placeholder      #282A36 #282A36 #F8F8F2 #282A36   #282A36
+#
+client.background       #F8F8F2
 
