--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -151,7 +151,8 @@ type = internal/cpu
 interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #f90000
+format-background= #f90000
+format-padding = 2
 label = %percentage:2%%
 
 [module/memory]
